--- a/src/index.html
+++ b/src/index.html
@@ -7,7 +7,7 @@
     <meta name="description" content="Minimal React Vite Tailwind starter kit" />
     <title>Vite React Tailwind</title>
   </head>
-  <body class="bg-gray-50 dark:bg-slate-900">
+  <body class="h-screen w-screen bg-gray-50 dark:bg-slate-900">
     <div id="root"></div>
     <script type="module" src="/main.tsx"></script>
   </body>
